use active majority bootstrapping